2002-12-16  Luke Gorrie  <luke@bluetail.com>

	* Release: 3.2!

	* elisp/edb.el (edb-make-breakpoint-overlay): Changed
	`point-at-bol' call to `line-beginning-position', for Emacs20
	compatibility.
	Minor XEmacs compatibility hacks.

	* elisp/distel.el (erlang-extended-mode): Moved "BODY" part from
	erlang-extended-mode's define-minor-mode and into a hook, for
	Emacs20 compatibility.

	* erl/distel.erl (debug_add): Now always reinterpreting modules,
	even when int:interpreted() says they're already interpreted,
	since it can give false information if modules are reloaded behind
	its back. Maybe we need to talk with OTP about the semantics of
	reloading interpreted modules in various ways..

	* elisp/derl.el (derl-cookie): Variable for explicitly setting
	cookie (from Mats Cronqvist)

	* elisp/distel.el (erlang-extended-mode): Some new key bindings:
	C-d C-d e: erl-ie-show-session (moved from C-c C-d s)
	C-c C-d s: edb-synch-breakpoints
	C-c C-d S: edb-save-dbg-state
	C-c C-d R: edb-restore-dbg-state

	* elisp/erl-service.el (erl-reload-module): Bugfix - if a module
	is interpreted, then we reinterpret it instead of
	reloading. Avoids problem of quietly uninterpreting modules.

	* elisp/erl.el (erl-node-name): Now including the unix pid of
	Emacs in the node name, so that multiple Emacsen can connect to
	the same erlang node. Previously there was a naming conflict.

2002-12-15  Luke Gorrie  <luke@bluetail.com>

	* elisp/edb.el (edb-make-breakpoints-stale): Never mark
	breakpoints as stale in attach buffer.
	(edb-breakpoint-stale-face): Switched stale breakpoint colour to
	purple (no decent dark yellow, at least on LCD screen.)

2002-12-13  Martin Bjorklund  <mbj@bluetail.com>

	* elisp/edb.el (edb-save-dbg-state): Save debugger state
	(i.e. which modules are interpreted, and their breakpoints).  The
	saved state can be restored after e.g. a node restart with
	edb-restore-dbg-state.

2002-12-12  Luke Gorrie  <luke@bluetail.com>
